--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>运营工具</title>
+  <title>刘颖的运营工具</title>
   <% if (htmlWebpackPlugin.options.nodeModules) { %>
     <!-- Add `node_modules/` to global paths so `require` works properly in development -->
     <script>
